--- a/fitsmeright/Scence/Main/Feed/FeedVC/FeedVC.storyboard
+++ b/fitsmeright/Scence/Main/Feed/FeedVC/FeedVC.storyboard
@@ -17,23 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gXr-O0-R0D" customClass="FloatingView" customModule="fitsmeright" customModuleProvider="target">
+                                <rect key="frame" x="305" y="597" width="50" height="50"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="aoW-Hl-ZM6"/>
+                                    <constraint firstAttribute="width" constant="50" id="ut6-gm-Zzm"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zhc-nx-grX" userLabel="TopView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
                                 <color key="backgroundColor" red="0.98039215690000003" green="0.44705882349999998" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LNf-X8-SFf">
-                                <rect key="frame" x="20" y="40" width="335" height="50"/>
-                                <color key="backgroundColor" red="0.98039215686274506" green="0.44705882352941173" blue="0.40784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="nze-FT-61g"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <state key="normal" title="Create Post">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HQH-NO-zpU">
-                                <rect key="frame" x="0.0" y="110" width="375" height="557"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pPa-UO-Kgm" customClass="PostView" customModule="fitsmeright" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="649"/>
@@ -52,25 +49,24 @@
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="LNf-X8-SFf" firstAttribute="leading" secondItem="7kc-vp-asO" secondAttribute="leading" constant="20" id="4Rp-ie-3w6"/>
+                            <constraint firstItem="aHg-fq-htJ" firstAttribute="bottom" secondItem="gXr-O0-R0D" secondAttribute="bottom" constant="20" id="6OK-gV-uLw"/>
                             <constraint firstItem="aHg-fq-htJ" firstAttribute="trailing" secondItem="HQH-NO-zpU" secondAttribute="trailing" id="A20-Rj-xCt"/>
                             <constraint firstItem="aHg-fq-htJ" firstAttribute="top" secondItem="Zhc-nx-grX" secondAttribute="bottom" id="AYJ-Qc-EcY"/>
                             <constraint firstItem="Zhc-nx-grX" firstAttribute="top" secondItem="7kc-vp-asO" secondAttribute="top" id="Hpk-EZ-6Sp"/>
-                            <constraint firstAttribute="trailing" secondItem="LNf-X8-SFf" secondAttribute="trailing" constant="20" id="Ipa-BA-bBE"/>
                             <constraint firstItem="aHg-fq-htJ" firstAttribute="bottom" secondItem="HQH-NO-zpU" secondAttribute="bottom" id="Klu-xD-duX"/>
                             <constraint firstItem="HQH-NO-zpU" firstAttribute="leading" secondItem="aHg-fq-htJ" secondAttribute="leading" id="RtT-fe-nF1"/>
+                            <constraint firstItem="HQH-NO-zpU" firstAttribute="top" secondItem="Zhc-nx-grX" secondAttribute="bottom" id="aOe-77-9Bm"/>
                             <constraint firstAttribute="trailing" secondItem="Zhc-nx-grX" secondAttribute="trailing" id="f1e-R2-Ab9"/>
+                            <constraint firstItem="aHg-fq-htJ" firstAttribute="trailing" secondItem="gXr-O0-R0D" secondAttribute="trailing" constant="20" id="l0t-ul-Do4"/>
                             <constraint firstItem="Zhc-nx-grX" firstAttribute="leading" secondItem="aHg-fq-htJ" secondAttribute="leading" id="nVk-bV-1mh"/>
-                            <constraint firstItem="LNf-X8-SFf" firstAttribute="top" secondItem="aHg-fq-htJ" secondAttribute="top" constant="20" id="p93-w5-ndc"/>
-                            <constraint firstItem="HQH-NO-zpU" firstAttribute="top" secondItem="LNf-X8-SFf" secondAttribute="bottom" constant="20" id="qiA-Tl-DeO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="aHg-fq-htJ"/>
                     </view>
                     <connections>
-                        <outlet property="btn_createPost" destination="LNf-X8-SFf" id="neU-MB-HGg"/>
                         <outlet property="sv_main" destination="HQH-NO-zpU" id="OVv-cR-bqY"/>
+                        <outlet property="v_addPostFloating" destination="gXr-O0-R0D" id="Pfc-Ki-1Uu"/>
                         <outlet property="v_post" destination="pPa-UO-Kgm" id="wpp-OD-8kF"/>
                     </connections>
                 </viewController>
