--- a/fitsmeright/Resource/Layout/Adapter/CRV/LabelCRV.xib
+++ b/fitsmeright/Resource/Layout/Adapter/CRV/LabelCRV.xib
@@ -12,11 +12,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LabelCRV" id="nPd-Bm-Dx7" customClass="LabelCRV" customModule="fitsmeright" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kv2-su-1Kh">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t0i-ZR-pwi">
                             <rect key="frame" x="15" y="0.0" width="345" height="1"/>
@@ -26,13 +26,13 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HKv-mJ-ecc">
-                            <rect key="frame" x="5" y="5" width="365" height="40"/>
+                            <rect key="frame" x="5" y="5" width="365" height="189"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FuD-bh-HIq">
-                            <rect key="frame" x="15" y="49" width="345" height="1"/>
+                            <rect key="frame" x="15" y="198" width="345" height="1"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="DL1-Rk-4UI"/>
@@ -67,7 +67,7 @@
                 <outlet property="v_container" destination="Kv2-su-1Kh" id="eYT-Wo-UBl"/>
                 <outlet property="v_topSeperator" destination="t0i-ZR-pwi" id="ClK-39-IRr"/>
             </connections>
-            <point key="canvasLocation" x="49" y="-65"/>
+            <point key="canvasLocation" x="48.799999999999997" y="1.3493253373313345"/>
         </collectionReusableView>
     </objects>
 </document>
