--- a/fitsmeright/Resource/Layout/View/ClosetMenuView.xib
+++ b/fitsmeright/Resource/Layout/View/ClosetMenuView.xib
@@ -13,23 +13,23 @@
             <connections>
                 <outlet property="imgv_icon" destination="8Br-Qy-PTc" id="6mo-as-1fN"/>
                 <outlet property="lb_title" destination="CdO-s6-dWb" id="Ahl-Nh-GTf"/>
-                <outlet property="v_container" destination="iN0-l3-epB" id="sum-tU-STI"/>
+                <outlet property="view" destination="iN0-l3-epB" id="TGJ-tL-ZQd"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Br-Qy-PTc">
-                    <rect key="frame" x="20" y="10" width="50" height="50"/>
+                    <rect key="frame" x="-116" y="30" width="607" height="607"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="8Br-Qy-PTc" secondAttribute="height" multiplier="1:1" id="Def-DX-Ip5"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 Items" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CdO-s6-dWb">
-                    <rect key="frame" x="5" y="65" width="80" height="20"/>
+                    <rect key="frame" x="5" y="642" width="365" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="nVW-61-wOZ"/>
                     </constraints>
